--- a/menu.html
+++ b/menu.html
@@ -16,20 +16,30 @@
 <body>
     
     <header>
-        <h1>Confitería La Ideal</h1>
-    </header>
-    
-    <nav>
-        <a class="nav" href="index.html">Inicio</a>
-        <a class="nav" href="menu.html">Menú</a>
-        <a class="nav" href="historia.html">Historia</a>
-        <a class="nav" href="ubicacion.html">Ubicación</a>
-        <a class="nav" href="contacto.html">Contacto</a>
-    </nav>
+        <div id="top-header">
+            <div id="logo">
+                <a href="index.html"><img src="imagenes/LogoLaIdealGris.png" alt="Logo de Confiteria La Ideal"></a>
+            </div>
 
-    <section>
-        <h2>Menú</h2>
-    </section>
+            <nav>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="historia.html">Historia</a></li>
+                        <li><a href="ubicacion.html">Ubicación</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <h2>Nuestra carta</h2>
+        </section>
+    </main>
 
     <footer>
         <a href="https://www.instagram.com/confiterialaideal/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a>
