--- a/contacto.html
+++ b/contacto.html
@@ -16,30 +16,40 @@
 <body>
     
     <header>
-        <h1>Confitería La Ideal</h1>
+        <div id="top-header">
+            <div id="logo">
+                <a href="index.html"><img src="imagenes/LogoLaIdealGris.png" alt="Logo de Confiteria La Ideal"></a>
+            </div>
+
+            <nav>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="historia.html">Historia</a></li>
+                        <li><a href="ubicacion.html">Ubicación</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 
-    <nav>
-        <a class="nav" href="index.html">Inicio</a>
-        <a class="nav" href="menu.html">Menú</a>
-        <a class="nav" href="historia.html">Historia</a>
-        <a class="nav" href="ubicacion.html">Ubicación</a>
-        <a class="nav" href="contacto.html">Contacto</a>
-    </nav>
-
-    <section>
-        <h2>Contáctenos</h2>
-        <form action="show_data.html" method="POST" target="_blank">
-            <fieldset>
-                <legend>Envíenos sus consultas o sugerencias</legend>
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre" required><br>
-                <input type="email" id="email" name="email" placeholder="E-mail" required><br>
-                <textarea id="mensaje" maxlength="500" name="mensaje" rows="10" placeholder="Mensaje" required></textarea><br>
-                <input type="reset" value="Borrar">
-                <input type="submit" value="Enviar">
-            </fieldset>
-        </form>
-    </section>
+    <main>
+        <section>
+            <h2>Contáctenos</h2>
+            <form action="show_data.html" method="POST" target="_blank">
+                <fieldset>
+                    <legend>Envíenos sus consultas o sugerencias</legend>
+                    <input type="text" id="nombre" name="nombre" placeholder="Nombre" required><br>
+                    <input type="email" id="email" name="email" placeholder="E-mail" required><br>
+                    <textarea id="mensaje" maxlength="500" name="mensaje" rows="10" placeholder="Mensaje" required></textarea><br>
+                    <input type="reset" value="Borrar">
+                    <input type="submit" value="Enviar">
+                </fieldset>
+            </form>
+        </section>
+    </main>
 
     <footer>
         <a href="https://www.instagram.com/confiterialaideal/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a>
