--- a/historia.html
+++ b/historia.html
@@ -16,38 +16,48 @@
 <body>
 
     <header>
-        <h1>Confitería La Ideal</h1>
-    </header>
-    
-    <nav>
-        <a class="nav" href="index.html">Inicio</a>
-        <a class="nav" href="menu.html">Menú</a>
-        <a class="nav" href="historia.html">Historia</a>
-        <a class="nav" href="ubicacion.html">Ubicación</a>
-        <a class="nav" href="contacto.html">Contacto</a>
-    </nav>
+        <div id="top-header">
+            <div id="logo">
+                <a href="index.html"><img src="imagenes/LogoLaIdealGris.png" alt="Logo de Confiteria La Ideal"></a>
+            </div>
 
-    <section>
-        <article>
-            <h2>Nuestra historia</h2>
-            <p>Fundada en 1912, la Confitería La Ideal mantuvo sus puertas cerradas desde 2017 hasta su reapertura en noviembre de 2022. Durante ese tiempo, los más de 2 mil metros cuadrados del edificio fueron puestos en valor tarea de la que participó un equipo de especialistas en bronce, madera, estuco, dorado a la hoja y vitrales.</p>
-            <p>Su arquitectura es todo un símbolo de la Belle Époque con una centenaria cúpula compuesta por 60 paneles de vitrales y una moldura elaborada con cartapesta. Las arañas y los apliques son originales que han sido pulidos durante su restauración. También se desarmaron y renovaron los ascensores y se acondicionaron los vitraux y la Bombonera del primer piso.</p>
-            <p>En la Confitería La Ideal encontrará especialidades en panadería, cocina, pastelería y bombonería, todo de elaboración propia. Un lugar destacado de la Ciudad de Buenos Aires, donde podrá sentarse a comer o a tomar un rico desayuno o merienda, comprar en la panadería, la bombonería o la sandwichería en un ambiente de patrimonio histórico. Lo invitamos a acompañarnos en un viaje a la antigua Buenos Aires.</p>
-        </article>
-        <article>
-            <h2>Curiosidades</h2>
-            <ul>
-                <li>La Confitería La Ideal fue declarada Bar Notable por la Legislatura de la Ciudad de Buenos Aires en el año 1998.</li>
-                <li>Manuel Rosendo Fernández, dueño original de la Confitería La Ideal, fue un inmigrante español que planeó cada detalle con todos los lujos de principios del siglo XX.</li>
-                <li>En la década del ’70, el primer piso se convirtió en un salón para milongas.</li>
-                <li>En sus mesas se sentaron Hipólito Irigoyen y Arturo Frondizi, Jorge Luis Borges, Carlos Gardel, Yoko Ono y Alan Parker, quien quedó deslumbrado con La Ideal y decidió filmar escenas de la película "Evita" estrenada en 1996.</li>
-            </ul>
-        </article>
-        <article>
+            <nav>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="historia.html">Historia</a></li>
+                        <li><a href="ubicacion.html">Ubicación</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <article>
+                <h2>Nuestra historia</h2>
+                <p>Fundada en 1912, la Confitería La Ideal mantuvo sus puertas cerradas desde 2017 hasta su reapertura en noviembre de 2022. Durante ese tiempo, los más de 2 mil metros cuadrados del edificio fueron puestos en valor tarea de la que participó un equipo de especialistas en bronce, madera, estuco, dorado a la hoja y vitrales.</p>
+                <p>Su arquitectura es todo un símbolo de la Belle Époque con una centenaria cúpula compuesta por 60 paneles de vitrales y una moldura elaborada con cartapesta. Las arañas y los apliques son originales que han sido pulidos durante su restauración. También se desarmaron y renovaron los ascensores y se acondicionaron los vitraux y la Bombonera del primer piso.</p>
+                <p>En la Confitería La Ideal encontrará especialidades en panadería, cocina, pastelería y bombonería, todo de elaboración propia. Un lugar destacado de la Ciudad de Buenos Aires, donde podrá sentarse a comer o a tomar un rico desayuno o merienda, comprar en la panadería, la bombonería o la sandwichería en un ambiente de patrimonio histórico. Lo invitamos a acompañarnos en un viaje a la antigua Buenos Aires.</p>
+            </article>
+            <article>
+                <h2>Curiosidades</h2>
+                <ul>
+                    <li>La Confitería La Ideal fue declarada Bar Notable por la Legislatura de la Ciudad de Buenos Aires en el año 1998.</li>
+                    <li>Manuel Rosendo Fernández, dueño original de la Confitería La Ideal, fue un inmigrante español que planeó cada detalle con todos los lujos de principios del siglo XX.</li>
+                    <li>En la década del ’70, el primer piso se convirtió en un salón para milongas.</li>
+                    <li>En sus mesas se sentaron Hipólito Irigoyen y Arturo Frondizi, Jorge Luis Borges, Carlos Gardel, Yoko Ono y Alan Parker, quien quedó deslumbrado con La Ideal y decidió filmar escenas de la película "Evita" estrenada en 1996.</li>
+                </ul>
+            </article>
+            <article>
             <h2>Un viaje en el tiempo</h2>
-            <iframe width="1013" height="570" src="https://www.youtube.com/embed/NAcp7dKKwyY" title="Confitería LA IDEAL Un viaje en el tiempo (Feat. Gustavo Nari) - META" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </article>
-    </section>
+                <iframe width="1013" height="570" src="https://www.youtube.com/embed/NAcp7dKKwyY" title="Confitería LA IDEAL Un viaje en el tiempo (Feat. Gustavo Nari) - META" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </article>
+        </section>
+    </main>
 
     <footer>
         <a href="https://www.instagram.com/confiterialaideal/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a>
