--- a/ubicacion.html
+++ b/ubicacion.html
@@ -16,23 +16,33 @@
 <body>
 
     <header>
-        <h1>Confitería La Ideal</h1>
-    </header>
-    
-    <nav>
-        <a class="nav" href="index.html">Inicio</a>
-        <a class="nav" href="menu.html">Menú</a>
-        <a class="nav" href="historia.html">Historia</a>
-        <a class="nav" href="ubicacion.html">Ubicación</a>
-        <a class="nav" href="contacto.html">Contacto</a>
-    </nav>
+        <div id="top-header">
+            <div id="logo">
+                <a href="index.html"><img src="imagenes/LogoLaIdealGris.png" alt="Logo de Confiteria La Ideal"></a>
+            </div>
 
-    <section>
-        <h2>Ubicación y horario</h2>
-        <p>Suipacha 384, Ciudad de Buenos Aires.</p>
-        <p>Abierto todos los días de 7 a 24hs.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.011464767061!2d-58.379562299999996!3d-34.6038716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacefa8470d1%3A0x8ccde1a499a12a17!2sSuipacha%20384%2C%20C1008AAH%20CABA!5e0!3m2!1ses-419!2sar!4v1693084754164!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+            <nav>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="historia.html">Historia</a></li>
+                        <li><a href="ubicacion.html">Ubicación</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <h2>Ubicación y horario</h2>
+            <p>Suipacha 384, Ciudad de Buenos Aires.</p>
+            <p>Abierto todos los días de 7 a 24hs.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.011464767061!2d-58.379562299999996!3d-34.6038716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacefa8470d1%3A0x8ccde1a499a12a17!2sSuipacha%20384%2C%20C1008AAH%20CABA!5e0!3m2!1ses-419!2sar!4v1693084754164!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
 
     <footer>
         <a href="https://www.instagram.com/confiterialaideal/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a>
