--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
     
     <main>
         <section>
-            <img src="imagenes/03.jpg" alt="Salon principal de Confiteria La Ideal">
-            <p>Café, Restaurant y Bar Notable.</p>
-            <p>Un salón majestuoso desde 1912.</p>
+            <div id="welcome">
+                <h1 class="title">
+                    Bienvenidos a Confitería La Ideal
+                </h1>
+                <img src="imagenes/03.jpg" alt="Salon principal de Confiteria La Ideal">
+                <p>Café, Restaurant y Bar Notable. Un salón majestuoso desde 1912.</p>
+            </div>
         </section>
     </main>
     
