--- a/menu.html
+++ b/menu.html
@@ -36,8 +36,31 @@
     </header>
 
     <main>
-        <section>
+        <section class="container" id="section-2">
             <h2>Nuestra carta</h2>
+            <div class="row">
+                <div id="column1">
+                    <div class="column-title">
+                        <h3>Desayuno y Merienda</h3>
+                    </div>
+                    <p>Explore nuestra carta de desayuno y merienda.</p>
+                    <a href="desayuno.html" class="button">Descubra</a>
+                </div>
+                <div id="column2">
+                    <div class="column-title">
+                        <h3>Almuerzo</h3>
+                    </div>
+                    <p>Explore nuestra carta de almuerzo.</p>
+                    <a href="almuerzo.html" class="button">Descubra</a>
+                </div>
+                <div id="column3">
+                    <div class="column-title">
+                        <h3>Cena</h3>
+                    </div>
+                    <p>Explore nuestra carta de cena.</p>
+                    <a href="cena.html" class="button">Descubra</a>
+                </div>
+            </div>
         </section>
     </main>
 
